--- a/src/Native/Silk.NET.Vulkan.SwiftShader.Native/Silk.NET.Vulkan.SwiftShader.Native.csproj
+++ b/src/Native/Silk.NET.Vulkan.SwiftShader.Native/Silk.NET.Vulkan.SwiftShader.Native.csproj
@@ -18,13 +18,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="build\net461\$(PackageId).targets" PackagePath="build\net461\$(PackageId).targets" />
+    <Content Include="runtimes\linux-arm\native\libvk_swiftshader.so" PackagePath="runtimes\linux-arm\native\libvk_swiftshader.so" />
+    <Content Include="runtimes\linux-arm\native\vk_swiftshader_icd.json" PackagePath="runtimes\linux-arm\native\vk_swiftshader_icd.json" />
+    <Content Include="runtimes\linux-arm64\native\libvk_swiftshader.so" PackagePath="runtimes\linux-arm64\native\libvk_swiftshader.so" />
+    <Content Include="runtimes\linux-arm64\native\vk_swiftshader_icd.json" PackagePath="runtimes\linux-arm64\native\vk_swiftshader_icd.json" />
     <Content Include="runtimes\linux-x64\native\libvk_swiftshader.so" PackagePath="runtimes\linux-x64\native\libvk_swiftshader.so" />
-    <Content Include="runtimes\osx-x64\native\libvk_swiftshader.dylib" PackagePath="runtimes\osx-x64\native\libvk_swiftshader.dylib" />
-    <Content Include="runtimes\win-x64\native\vk_swiftshader.dll" PackagePath="runtimes\win-x64\native\vk_swiftshader.dll" />
-    <Content Include="runtimes\win-x86\native\vk_swiftshader.dll" PackagePath="runtimes\win-x86\native\vk_swiftshader.dll" />
     <Content Include="runtimes\linux-x64\native\vk_swiftshader_icd.json" PackagePath="runtimes\linux-x64\native\vk_swiftshader_icd.json" />
-    <Content Include="runtimes\osx-x64\native\vk_swiftshader_icd.json" PackagePath="runtimes\osx-x64\native\vk_swiftshader_icd.json" />
+    <Content Include="runtimes\osx-arm64\native\libvk_swiftshader.dylib" PackagePath="runtimes\osx-arm64\native\libvk_swiftshader.dylib" />
+    <Content Include="runtimes\osx-arm64\native\vk_swiftshader_icd.json" PackagePath="runtimes\osx-arm64\native\vk_swiftshader_icd.json" />
+    <Content Include="runtimes\osx-x64\native\libvk_swiftshader.dylib" PackagePath="runtimes\osx-x64\native\libvk_swiftshader.dylib" />
+    <Content Include="runtimes\win-arm64\native\vk_swiftshader.dll" PackagePath="runtimes\win-arm64\native\vk_swiftshader.dll" />
+    <Content Include="runtimes\win-arm64\native\vk_swiftshader_icd.json" PackagePath="runtimes\win-arm64\native\vk_swiftshader_icd.json" />
+    <Content Include="runtimes\win-x64\native\vk_swiftshader.dll" PackagePath="runtimes\win-x64\native\vk_swiftshader.dll" />
     <Content Include="runtimes\win-x64\native\vk_swiftshader_icd.json" PackagePath="runtimes\win-x64\native\vk_swiftshader_icd.json" />
-    <Content Include="runtimes\win-x86\native\vk_swiftshader_icd.json" PackagePath="runtimes\win-x86\native\vk_swiftshader_icd.json" />
+    <Content Include="runtimes\win-x86\native\vk_swiftshader.dll" PackagePath="runtimes\win-x86\native\vk_swiftshader.dll" />
+    <Content Include="runtimes\win-x64\native\vk_swiftshader_icd.json" PackagePath="runtimes\win-x64\native\vk_swiftshader_icd.json" />
   </ItemGroup>
 </Project>
