--- a/src/Windowing/Silk.NET.SDL/Silk.NET.SDL.csproj
+++ b/src/Windowing/Silk.NET.SDL/Silk.NET.SDL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ultz.Native.SDL" Version="2.*" />
+    <ProjectReference Include="..\..\Native\Silk.NET.SDL.Native\Silk.NET.SDL.Native.csproj" />
   </ItemGroup>
 
   <ItemGroup>
